Orden de las paginas y errores varios corregidos

--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <meta name="keywords" content="obra, social, prepaga, salud, medicina, consultorios, emergencias">
     <title>Mifar</title>
     <link rel="shortcut icon" href="Images/favicon.jpg" type="image/x-icon">
-    <!-- Css Comentado -->
-    <!-- <link rel="stylesheet" href="style.css"> -->
     <!-- Css Bootstrap personalizado -->
-    <link rel="stylesheet" href="css/styleBootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS link -->
@@ -40,10 +38,10 @@
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <ul class="navbar-nav list-unstyled list-inline f justify-content-space-between">
                             <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="prestadores.html">Prestadores</a></li>
-                            <li class="nav-item"><a class="nav-link" href="asociarse.html">Asociarse</a></li>
-                            <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+                            <li class="nav-item"><a class="nav-link" href="pages/prestadores.html">Prestadores</a></li>
+                            <li class="nav-item"><a class="nav-link" href="pages/asociarse.html">Asociarse</a></li>
+                            <li class="nav-item"><a class="nav-link" href="pages/nosotros.html">Nosotros</a></li>
+                            <li class="nav-item"><a class="nav-link" href="pages/contact.html">Contacto</a></li>
                         </ul>
                     </div>
                 </div>
@@ -53,11 +51,11 @@
                 <div class="row p-3 m-5">
                     <div class="col-lg-6 lead p-3">
                         <div class="text-center">
-                            <h2 class="mainIndex__text--title">Lorem, ipsum.</h2>
+                            <h2 class="mainIndex__text--title">Mifar</h2>
                         </div>
                         <div class="text-center">
-                            <p class="mainIndex__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
-                            <p class="mainIndex__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. In quae facilis sapiente quisquam ullam laboriosam fugiat nisi atque.</p>
+                            <p class="mainIndex__text">Obra social de primer nivel preparada para una atencion eficaz e inmediata para sus socios.</p>
+                            <p class="mainIndex__text">Nos especializamos en la atencion de emergencias para los asociados, garantizandoles rapidez.</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -97,7 +95,7 @@
         <footer class="p-3 m-2">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="footerText footerText--p1">Copyright 2022 Lorem, ipsum.</p>
+                    <p class="footerText footerText--p1">CCopyright 2022. Agustin, Mifar.</p>
                     <p class="footerText footerText--p2" >Telefono emergencias: 0800-111-000</p>
                 </div>
                 <div class="col-md-6 justify-items-center align-items-center p-3">
