--- a/pages/asociarse.html
+++ b/pages/asociarse.html
@@ -7,11 +7,9 @@
     <meta name="description" content="Obra social accesible y eficaz" >
     <meta name="keywords" content="obra, social, prepaga, salud, medicina, consultorios, emergencias">
     <title>Mifar</title>
-    <link rel="shortcut icon" href="Images/favicon.jpg" type="image/x-icon">
-    <!-- Css Comentado -->
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="shortcut icon" href="../Images/favicon.jpg" type="image/x-icon">
     <!-- Css Bootstrap personalizado -->
-    <link rel="stylesheet" href="css/styleBootstrap.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS link -->
@@ -23,7 +21,7 @@
         <header>
             <div class="row">
                 <div class= "col p-3 col-12 col-md-6 text-center text-md-start">
-                    <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="Logo Mifar" class="top__header--logo"></a>
+                    <a class="p-3" href="index.html"><img src="../Images/logo.svg" alt="Logo Mifar" class="top__header--logo"></a>
                     <h1 class="p-3 header__title">Mifar</h1>
                 </div>
                 <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
@@ -39,43 +37,47 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <ul class="navbar-nav list-unstyled list-inline f justify-content-space-between">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="prestadores.html">Prestadores</a></li>
-                            <li class="nav-item"><a class="nav-link" href="asociarse.html">Asociarse</a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="asociarse.html">Asociarse</a></li>
                             <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contacto</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
                         </ul>
                     </div>
                 </div>
             </nav>
             <!-- Main -->
             <main class="container-fluid">
-                <div class="p-5 m-0">
-                    <div class="col text-center lead">
-                        <h2 class="p-3 m-1">Lorem, ipsum.</h2>
-                        <p class="p-3 m-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint beatae, atque facere quis quasi animi?</p>
-                        <img class="img-thumbnail col-lg-6 img-fluid m-1" src="Images/contactsample.jpg" alt="Imagen de contacto">
+                <div class="col m-0 p-3">
+                    <div class="lead text-center m-2">
+                        <h2 class="">Sumese a nosotros</h2>
+                        <p class="p-3">Con los siguientes datos un asesor capacitado se comunicara con usted y le brindara mas informacion.</p>
                     </div>
-                    <!-- Form -->
-                    <div class="col text-center">
-                        <form class="m-5" action="">
-                            <div class="p-3">
-                                <label class="col-12 col-md-4 form-group m-md-3 text-center" for="phone">Ingrese su numero de telefono:</label>
-                                <input class="col-12 col-md-4" type="number" name="phone" id="" placeholder="Telefono" required>
-                            </div>
-                            <div>
-                                <label class="col-12 col-md-4 form-group m-md-3 text-center" for="email">Ingrese su Email:</label>
-                                <input class="col-12 col-md-4" type="email" name="email" id="" placeholder="Email" required>
-                            </div>
-                            <div class="">
-                                <label class="col-12 col-md-6 p-3 m-1 form-group text-center" for="extra">Consulta:</label>
-                                <textarea class="col-12 col-md-6 m-md-3" name="extra" id="" cols="25" rows="8" placeholder="Ingrese aqui su consulta"></textarea>
-                            </div>
-                            <div>
-                                <button type="button" class="btn btn-success m-2">Enviar</button>
+                    <div class="">
+                        <form class="" action="">
+                            <div class="form-group">
+                                <div class="form-group m-5">
+                                    <label class="col-12 col-md-4" for="name">Ingrese su nombre completo:</label>
+                                    <input class="col-12 col-md-4" type="text" name="nombre" id="" placeholder= "Nombres y apellidos" required>
+                                </div>
+                                <div class="form-group m-5">
+                                    <label class="col-12 col-md-4" for="email">Ingrese su Email:</label>
+                                    <input class="col-12 col-md-4" type="email" name="email" id="" placeholder="Email" required>
+                                </div>
+                                <div class="form-group m-5">
+                                    <label class="col-12 col-md-4" for="phone">Ingrese su numero de telefono:</label>
+                                    <input class="col-12 col-md-4" type="number" name="phone" id="" placeholder="Telefono" required>
+                                </div>
+                                <div class="form-group m-5">
+                                    <label class="col-12 col-md-4" for="age">Fecha de nacimiento:</label>
+                                    <input class="col-12 col-md-4" type="date" name="age" id="" required>
+                                </div>
+                                <div class="text-center m-5 p-3">
+                                    <button type="button " class="btn btn-success">Enviar</button>
+                                </div>
                             </div>
                         </form>
-                    </div>
+                    </div> 
                 </div>
             </main>
         </div>
@@ -83,19 +85,19 @@
         <footer class="p-3 m-2">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="footerText footerText--p1">Copyright 2022 Lorem, ipsum.</p>
+                    <p class="footerText footerText--p1">Copyright 2022. Agustin, Mifar.</p>
                     <p class="footerText footerText--p2" >Telefono emergencias: 0800-111-000</p>
                 </div>
                 <div class="col-md-6 justify-items-center align-content-center p-3">
                     <div class="row justify-content-center align-items-center">
                         <div class="row w-25">
-                            <a class="d-flex justify-content-center align-items-center" href="https://instagram.com" target="_blank"> <img class="hover__img" src="Images/instagram.svg" alt="Logo de Instagram"></svg></a>
+                            <a class="d-flex justify-content-center align-items-center" href="https://instagram.com" target="_blank"> <img class="hover__img" src="../Images/instagram.svg" alt="Logo de Instagram"></svg></a>
                         </div>
                         <div class="row w-25">
-                            <a class="d-flex justify-content-center align-items-center" href="https://twitter.com" target="_blank"><img class="hover__img" src="Images/twitter.svg" alt="Logo de Twitter"></a>
+                            <a class="d-flex justify-content-center align-items-center" href="https://twitter.com" target="_blank"><img class="hover__img" src="../Images/twitter.svg" alt="Logo de Twitter"></a>
                         </div>
                         <div class="row w-25">
-                            <a class="d-flex justify-content-center align-items-center" href="https://facebook.com" target="_blank"><img class="hover__img" src="Images/facebook.svg" alt="Logo de Facebook"></a>
+                            <a class="d-flex justify-content-center align-items-center" href="https://facebook.com" target="_blank"><img class="hover__img" src="../Images/facebook.svg" alt="Logo de Facebook"></a>
                         </div>
                     </div>
                 </div>
