--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,23 +7,21 @@
     <meta name="description" content="Obra social accesible y eficaz" >
     <meta name="keywords" content="obra, social, prepaga, salud, medicina, consultorios, emergencias">
     <title>Mifar</title>
-    <link rel="shortcut icon" href="Images/favicon.jpg" type="image/x-icon">
-    <!-- Css Comentado -->
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="shortcut icon" href="../Images/favicon.jpg" type="image/x-icon">
     <!-- Css Bootstrap personalizado -->
-    <link rel="stylesheet" href="css/styleBootstrap.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS link -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 </head>
 <body>
-    <div class="container-fluid cont-princ">
+    <div class="container-fluid">
         <!-- Header -->
         <header>
             <div class="row">
                 <div class= "col p-3 col-12 col-md-6 text-center text-md-start">
-                    <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="Logo Mifar" class="top__header--logo"></a>
+                    <a class="p-3" href="index.html"><img src="../Images/logo.svg" alt="Logo Mifar" class="top__header--logo"></a>
                     <h1 class="p-3 header__title">Mifar</h1>
                 </div>
                 <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
@@ -39,58 +37,63 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <ul class="navbar-nav list-unstyled list-inline f justify-content-space-between">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="prestadores.html">Prestadores</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="prestadores.html">Prestadores</a></li>
                             <li class="nav-item"><a class="nav-link" href="asociarse.html">Asociarse</a></li>
                             <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contacto</a></li>
                         </ul>
                     </div>
                 </div>
             </nav>
             <!-- Main -->
             <main class="container-fluid">
-                <div class="m-0">
-                    <div class="col">
-                        <div class="lead text-center m-0 p-3">
-                            <h2 class="mainPrestadores__title">Lorem, ipsum.</h2>
-                            <p class="mainPrestadores__p--1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non excepturi voluptates harum. Dolorum pariatur in placeat provident corrupti natus velit omnis enim, ratione, dolores dolorem modi minus obcaecati saepe eveniet.</p>
-                            <ul class="text-decoration-none list-unstyled mainPrestadores__ul--1">
-                                <li class="">Lorem ipsum dolor sit amet.</li>
-                                <li class="">Lorem, ipsum dolor sit amet consectetur.</li>
-                                <li class="">Lorem ipsum dolor sit amet.</li>
-                            </ul>
-                            <p class="mainPrestadores__p--2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sed at accusamus itaque assumenda fugit. Consectetur architecto optio unde, doloremque, dolores, nihil facilis voluptas deserunt nesciunt sint expedita. Maiores, rem.</p>
-                            <ul class="text-decoration-none list-unstyled mainPrestadores__ul--2">
-                                <li class="">Lorem ipsum dolor sit amet consectetur.</li>
-                                <li class="">Lorem ipsum dolor sit.</li>
-                                <li class="">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-                            </ul>
-                        </div>
-                        <div class="text-center m-0 p-3">
-                            <img class="img-thumbnail col-lg-6 img-fluid" src="Images/hospital.jpg" alt="Imagen pasillo de hospital">
-                        </div>
+                <div class="p-5 m-0">
+                    <div class="col text-center lead">
+                        <h2 class="p-3 m-1">¡Contactese con nosotros!</h2>
+                        <p class="p-3 m-1">Ante cualquier duda o consulta respecto a nuestros servicios y planes, complete el formulario a continuacion.</p>
+                        <img class="img-thumbnail col-lg-6 img-fluid m-1" src="../Images/contactsample.jpg" alt="Imagen de contacto">
+                    </div>
+                    <!-- Form -->
+                    <div class="col text-center">
+                        <form class="m-5" action="">
+                            <div class="p-3">
+                                <label class="col-12 col-md-4 form-group m-md-3 text-center" for="phone">Ingrese su numero de telefono:</label>
+                                <input class="col-12 col-md-4" type="number" name="phone" id="" placeholder="Telefono" required>
+                            </div>
+                            <div>
+                                <label class="col-12 col-md-4 form-group m-md-3 text-center" for="email">Ingrese su Email:</label>
+                                <input class="col-12 col-md-4" type="email" name="email" id="" placeholder="Email" required>
+                            </div>
+                            <div class="">
+                                <label class="col-12 col-md-6 p-3 m-1 form-group text-center" for="extra">Consulta:</label>
+                                <textarea class="col-12 col-md-6 m-md-3" name="extra" id="" cols="25" rows="8" placeholder="Ingrese aqui su consulta"></textarea>
+                            </div>
+                            <div>
+                                <button type="button" class="btn btn-success m-2">Enviar</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </main>
         </div>
         <!-- Footer -->
-        <footer class="p-3 container-fluid m-2">
+        <footer class="p-3 m-2">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="footerText footerText--p1">Copyright 2022 Lorem, ipsum.</p>
+                    <p class="footerText footerText--p1">Copyright 2022. Agustin, Mifar.</p>
                     <p class="footerText footerText--p2" >Telefono emergencias: 0800-111-000</p>
                 </div>
                 <div class="col-md-6 justify-items-center align-content-center p-3">
                     <div class="row justify-content-center align-items-center">
                         <div class="row w-25">
-                            <a class="d-flex justify-content-center align-items-center" href="https://instagram.com" target="_blank"> <img class="hover__img" src="Images/instagram.svg" alt="Logo de Instagram" ></svg></a>
+                            <a class="d-flex justify-content-center align-items-center" href="https://instagram.com" target="_blank"> <img class="hover__img" src="../Images/instagram.svg" alt="Logo de Instagram"></svg></a>
                         </div>
                         <div class="row w-25">
-                            <a class="d-flex justify-content-center align-items-center" href="https://twitter.com" target="_blank"><img class="hover__img" src="Images/twitter.svg" alt="Logo de Twitter"></a>
+                            <a class="d-flex justify-content-center align-items-center" href="https://twitter.com" target="_blank"><img class="hover__img" src="../Images/twitter.svg" alt="Logo de Twitter"></a>
                         </div>
                         <div class="row w-25">
-                            <a class="d-flex justify-content-center align-items-center" href="https://facebook.com" target="_blank"><img class="hover__img" src="Images/facebook.svg" alt="Logo de Facebook"></a>
+                            <a class="d-flex justify-content-center align-items-center" href="https://facebook.com" target="_blank"><img class="hover__img" src="../Images/facebook.svg" alt="Logo de Facebook"></a>
                         </div>
                     </div>
                 </div>
