--- a/pages/prestadores.html
+++ b/pages/prestadores.html
@@ -7,23 +7,21 @@
     <meta name="description" content="Obra social accesible y eficaz" >
     <meta name="keywords" content="obra, social, prepaga, salud, medicina, consultorios, emergencias">
     <title>Mifar</title>
-    <link rel="shortcut icon" href="Images/favicon.jpg" type="image/x-icon">
-    <!-- Css Comentado -->
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="shortcut icon" href="../Images/favicon.jpg" type="image/x-icon">
     <!-- Css Bootstrap personalizado -->
-    <link rel="stylesheet" href="css/styleBootstrap.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS link -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid cont-princ">
         <!-- Header -->
         <header>
             <div class="row">
                 <div class= "col p-3 col-12 col-md-6 text-center text-md-start">
-                    <a class="p-3" href="index.html"><img src="Images/logo.svg" alt="Logo Mifar" class="top__header--logo"></a>
+                    <a class="p-3" href="index.html"><img src="../Images/logo.svg" alt="Logo Mifar" class="top__header--logo"></a>
                     <h1 class="p-3 header__title">Mifar</h1>
                 </div>
                 <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
@@ -39,59 +37,58 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <ul class="navbar-nav list-unstyled list-inline f justify-content-space-between">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="prestadores.html">Prestadores</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="prestadores.html">Prestadores</a></li>
                             <li class="nav-item"><a class="nav-link" href="asociarse.html">Asociarse</a></li>
-                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a></li>
+                            <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
                         </ul>
                     </div>
                 </div>
             </nav>
-            <!-- main -->
+            <!-- Main -->
             <main class="container-fluid">
-                <div class="text-center p-5 lead m-0">
-                    <div class="">
-                        <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--1 hover__img" src="Images/hombre1.jpg" alt="Juan"></a>
-                        <div class="mainNosotros__textContainer--1">
-                            <h3 class="p-3 m-2">Lorem, ipsum.</h3>
-                            <p class="">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
+                <div class="m-0">
+                    <div class="col">
+                        <div class="lead text-center m-0 p-3">
+                            <h2 class="mainPrestadores__title">Clinica "El desenlace".</h2>
+                            <p class="mainPrestadores__p--1">Sanatorio de primer nivel preparado para las necesidades de nuestros socios.</p>
+                            <ul class="text-decoration-none list-unstyled mainPrestadores__ul--1">
+                                <li class="">Ambulancias.</li>
+                                <li class="">Centros de reanimacion.</li>
+                                <li class="">Fisioterapia.</li>
+                            </ul>
+                            <p class="mainPrestadores__p--2">Ademas, contamos con laboratorios internos para socios donde podran realizarse todos los analisis</p>
+                            <ul class="text-decoration-none list-unstyled mainPrestadores__ul--2">
+                                <li class="">Analisis de sangre.</li>
+                                <li class="">Tomografos.</li>
+                                <li class="">Camaras de rayos.</li>
+                            </ul>
                         </div>
-                    </div>
-                    <div class="">
-                        <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--2 hover__img" src="Images/hombre2.jpg" alt="Jose"></a>
-                        <div class="mainNosotros__textContainer--2">
-                            <h3 class="p-3 m-2">Lorem, ipsum.</h3>
-                            <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
-                        </div>
-                    </div>
-                    <div class="">
-                        <a href="https://www.linkedin.com/" target="_blank"><img class="col-lg-6 img-fluid img-thumbnail mainNosotros__img--3 hover__img" src="Images/hombre3.jpg" alt="Jorge"></a>
-                        <div class="mainNosotros__textContainer--3">
-                            <h3 class="p-3 m-2">Lorem, ipsum.</h3>
-                            <p class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, impedit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam.</p>
+                        <div class="text-center m-0 p-3">
+                            <img class="img-thumbnail col-lg-6 img-fluid" src="../Images/hospital.jpg" alt="Imagen pasillo de hospital">
                         </div>
                     </div>
                 </div>
             </main>
         </div>
         <!-- Footer -->
-        <footer class="p-3 m-2">
+        <footer class="p-3 container-fluid m-2">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="footerText footerText--p1">Copyright 2022 Lorem, ipsum.</p>
+                    <p class="footerText footerText--p1">Copyright 2022. Agustin, Mifar.</p>
                     <p class="footerText footerText--p2" >Telefono emergencias: 0800-111-000</p>
                 </div>
                 <div class="col-md-6 justify-items-center align-content-center p-3">
                     <div class="row justify-content-center align-items-center">
                         <div class="row w-25">
-                            <a class="d-flex justify-content-center align-items-center" href="https://instagram.com" target="_blank"> <img class="hover__img" src="Images/instagram.svg" alt="Logo de Instagram"></svg></a>
+                            <a class="d-flex justify-content-center align-items-center" href="https://instagram.com" target="_blank"> <img class="hover__img" src="../Images/instagram.svg" alt="Logo de Instagram" ></svg></a>
                         </div>
                         <div class="row w-25">
-                            <a class="d-flex justify-content-center align-items-center" href="https://twitter.com" target="_blank"><img class="hover__img" src="Images/twitter.svg" alt="Logo de Twitter"></a>
+                            <a class="d-flex justify-content-center align-items-center" href="https://twitter.com" target="_blank"><img class="hover__img" src="../Images/twitter.svg" alt="Logo de Twitter"></a>
                         </div>
                         <div class="row w-25">
-                            <a class="d-flex justify-content-center align-items-center" href="https://facebook.com" target="_blank"><img class="hover__img" src="Images/facebook.svg" alt="Logo de Facebook"></a>
+                            <a class="d-flex justify-content-center align-items-center" href="https://facebook.com" target="_blank"><img class="hover__img" src="../Images/facebook.svg" alt="Logo de Facebook"></a>
                         </div>
                     </div>
                 </div>
