Ultimos detalles para entrega final

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <footer class="p-3 m-2">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="footerText footerText--p1">CCopyright 2022. Agustin, Mifar.</p>
+                    <p class="footerText footerText--p1">Copyright 2022. Agustin, Mifar.</p>
                     <p class="footerText footerText--p2" >Telefono emergencias: 0800-111-000</p>
                 </div>
                 <div class="col-md-6 justify-items-center align-items-center p-3">
