--- a/pages/asociarse.html
+++ b/pages/asociarse.html
@@ -57,19 +57,19 @@
                         <form class="" action="">
                             <div class="form-group">
                                 <div class="form-group m-5">
-                                    <label class="col-12 col-md-4" for="name">Ingrese su nombre completo:</label>
+                                    <label class="col-12 col-md-4 text-center text-md-start" for="name">Ingrese su nombre completo:</label>
                                     <input class="col-12 col-md-4" type="text" name="nombre" id="" placeholder= "Nombres y apellidos" required>
                                 </div>
                                 <div class="form-group m-5">
-                                    <label class="col-12 col-md-4" for="email">Ingrese su Email:</label>
+                                    <label class="col-12 col-md-4 text-center text-md-start" for="email">Ingrese su Email:</label>
                                     <input class="col-12 col-md-4" type="email" name="email" id="" placeholder="Email" required>
                                 </div>
                                 <div class="form-group m-5">
-                                    <label class="col-12 col-md-4" for="phone">Ingrese su numero de telefono:</label>
+                                    <label class="col-12 col-md-4 text-center text-md-start" for="phone">Ingrese su numero de telefono:</label>
                                     <input class="col-12 col-md-4" type="number" name="phone" id="" placeholder="Telefono" required>
                                 </div>
                                 <div class="form-group m-5">
-                                    <label class="col-12 col-md-4" for="age">Fecha de nacimiento:</label>
+                                    <label class="col-12 col-md-4 text-center text-md-start" for="age">Fecha de nacimiento:</label>
                                     <input class="col-12 col-md-4" type="date" name="age" id="" required>
                                 </div>
                                 <div class="text-center m-5 p-3">
