--- a/pages/asociarse.html
+++ b/pages/asociarse.html
@@ -21,7 +21,7 @@
         <header>
             <div class="row">
                 <div class= "col p-3 col-12 col-md-6 text-center text-md-start">
-                    <a class="p-3" href="index.html"><img src="../Images/logo.svg" alt="Logo Mifar" class="top__header--logo"></a>
+                    <a class="p-3" href="../index.html"><img src="../Images/logo.svg" alt="Logo Mifar" class="top__header--logo"></a>
                     <h1 class="p-3 header__title">Mifar</h1>
                 </div>
                 <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center justify-content-md-end p-3 p-md-5">
